--- a/public/index.html
+++ b/public/index.html
@@ -6,26 +6,69 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Source+Sans+Pro:300,300i,400,700,700i&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="scripts/hover.js"></script>
+    
   </head>
 
   <body>
 
     <!-- Top nav bar (fixed) -->
-    <nav>
-      <span>tweeter</span>
+    <nav id="tweeterNav">
+      <div id="navContent">
+          <span id="navTitle">tweeter</span>
+          <div id="writeTweet">
+            <span><strong>Write</strong> a new tweet</span><br>
+            <i class="fas fa-angle-double-down"></i>
+          </div>
+      </div>
     </nav>
+
+    <header>
+        <div class="profile">
+            <img src="/images/profile-hex.png"> 
+        </div>
+        <div class="profile">
+            <h2>Karl Eisen Yabut</h2>
+        </div>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <!-- Create new tweet section-->
+        <section class="new-tweet">
+            <h2>Compose Tweet</h2>
+            <form method="POST" action="/tweets/">
+              <div id="textAreaBorder">
+                <textarea id="tweetTxtArea" rows="2" name="text" placeholder="What are you humming about?"></textarea>
+              </div>
+              <div id="btnAndSpan">
+                <input id="submitBtn" type="submit" value="Tweet">
+                <span class="counter">140</span>
+              </div>
+            </form>
+          </section>
+
+          <!-- Tweets section -->
+          <section id="tweets-container">
+          </section>
+          
     </main>
 
   </body>
