Implemented rendering tweets from the server (**Bug** every successful tweets appends the whole list of tweets)

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       <!-- Create new tweet section-->
         <section class="new-tweet">
             <h2>Compose Tweet</h2>
-            <form method="POST" action="/tweets/">
+            <form id="newTweetForm" method="POST" action="/tweets/">
               <div id="textAreaBorder">
                 <textarea id="tweetTxtArea" rows="2" name="text" placeholder="What are you humming about?"></textarea>
               </div>
