Changed the color scheme of the whole app / **BUG** toggling compose tweet section

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,14 @@
     <!-- Top nav bar (fixed) -->
     <nav id="tweeterNav">
       <div id="navContent">
-          <span id="navTitle">tweeter</span>
+          <!-- <span id="navTitle">tweeter</span> -->
+          <span class="navT navTitle">t</span>
+          <span id="navW" class="navTitle">w</span>
+          <span class="navE navTitle">e</span>
+          <span class="navE navTitle">e</span>
+          <span class="navT navTitle">t</span>
+          <span class="navE navTitle">e</span>
+          <span id="navR" class="navTitle">r</span>
           <div id="writeTweet">
             <span><strong>Write</strong> a new tweet</span><br>
             <i id="iconBounce" class="fas fa-angle-double-down"></i>
